Fixes #19 - namespacing/prefixing CSS IDs

--- a/css/panel.css
+++ b/css/panel.css
@@ -87,6 +87,10 @@ iframe {
 	margin-top: 10px;
 }
 
+#settings {
+	padding-right: 10px;
+}
+
 #social-buttons {
 	position: fixed;
 	right: 10px;
